<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AsteroidesActivity!</string>
    <string name="app_name">Asteroides</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="t_acercade">Este programa ha sido desarrollado por 4ng3r, mas informacion en comunidadcodificada.com</string>
    <string name="configuracion">Configuracion</string>

</resources>